# jinjanator-plugin-ansible

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml  lint.yml  pypi-package.yml  test.yml
changelog.d/: +9257a1e4.breaking.md  +api23.4.breaking.md  +plugins.changing.md  1.adding.md  towncrier_template.md.jinja
src/jinjanator_plugin_ansible/: plugin.py
tests/: test_plugin.py
workflow-support/: make_ci_image.sh
